--- a/CIFFCAFFParser/makefile
+++ b/CIFFCAFFParser/makefile
@@ -1,7 +1,10 @@
 all: main.exe
 
-main.exe: main.o
-		g++ -o main.exe main.o
+logger.o: Logger.cpp
+		g++ -c Logger.cpp
+
+main.exe: main.o logger.o
+		g++ -o main.exe main.o logger.o
 
 main.o: Main.cpp
 		g++ -c Main.cpp
