--- a/pipelines/valgrind-azure-pipelines.yml
+++ b/pipelines/valgrind-azure-pipelines.yml
@@ -1,5 +1,10 @@
 trigger:
-- master
+  branches:
+   include:
+     - master
+  paths:
+    include:
+      - CIFFCAFFParser/*
 
 pool:
   vmImage: 'ubuntu-latest'
