--- a/pipelines/backend-azure-pipelines.yml
+++ b/pipelines/backend-azure-pipelines.yml
@@ -13,43 +13,44 @@ pool:
   vmImage: 'ubuntu-latest'
 
 stages:
-  # - stage: Build
-  #   jobs:
-  #     - job: Build
-  #       steps:
-  #         - task: UseDotNet@2
-  #           inputs:
-  #             packageType: 'sdk'
-  #             version: '2.x'
-  #         - task: SonarCloudPrepare@1
-  #           inputs:
-  #             SonarCloud: 'sonarCloud'
-  #             organization: 'bodnarkevin-github'
-  #             scannerMode: 'MSBuild'
-  #             projectKey: 'TODO'
-  #         - task: UseDotNet@2
-  #           inputs:
-  #             packageType: 'sdk'
-  #             version: '3.1.x'
-  #         - task: DotNetCoreCLI@2
-  #           inputs:
-  #             command: 'restore'
-  #             feedsToUse: 'select'
-  #         - task: DotNetCoreCLI@2
-  #           inputs:
-  #             command: 'build'
-  #         - task: DotNetCoreCLI@2
-  #           inputs:
-  #             command: 'test'
-  #         - task: UseDotNet@2
-  #           inputs:
-  #             packageType: 'sdk'
-  #             version: '2.x'
-  #         - task: SonarCloudAnalyze@1
-  #         - task: SonarCloudPublish@1
-  #           inputs:
-  #             pollingTimeoutSec: '300'
+  - stage: Build
+    jobs:
+      - job: Build
+        steps:
+          - task: UseDotNet@2
+            inputs:
+              packageType: 'sdk'
+              version: '2.x'
+          - task: SonarCloudPrepare@1
+            inputs:
+              SonarCloud: 'sonarCloud'
+              organization: 'bodnarkevin'
+              scannerMode: 'MSBuild'
+              projectKey: 'caffly-backend'
+          - task: UseDotNet@2
+            inputs:
+              packageType: 'sdk'
+              version: '3.1.x'
+          - task: DotNetCoreCLI@2
+            inputs:
+              command: 'restore'
+              feedsToUse: 'select'
+          - task: DotNetCoreCLI@2
+            inputs:
+              command: 'build'
+          - task: DotNetCoreCLI@2
+            inputs:
+              command: 'test'
+          - task: UseDotNet@2
+            inputs:
+              packageType: 'sdk'
+              version: '2.x'
+          - task: SonarCloudAnalyze@1
+          - task: SonarCloudPublish@1
+            inputs:
+              pollingTimeoutSec: '300'
   - stage: Docker
+    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest')
     jobs:
       - job: Docker
         steps:
@@ -62,6 +63,7 @@ stages:
               buildContext: '$(Build.SourcesDirectory)/CaffStore.Backend'
               tags: 'latest'
   - stage: Deploy
+    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest')
     jobs:
       - job: Deploy
         steps:
