--- a/pipelines/backend-azure-pipelines.yml
+++ b/pipelines/backend-azure-pipelines.yml
@@ -34,13 +34,16 @@ stages:
           - task: DotNetCoreCLI@2
             inputs:
               command: 'restore'
+              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
               feedsToUse: 'select'
           - task: DotNetCoreCLI@2
             inputs:
               command: 'build'
+              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
           - task: DotNetCoreCLI@2
             inputs:
               command: 'test'
+              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
           - task: UseDotNet@2
             inputs:
               packageType: 'sdk'
