--- a/pipelines/backend-azure-pipelines.yml
+++ b/pipelines/backend-azure-pipelines.yml
@@ -21,6 +21,7 @@ stages:
             inputs:
               packageType: 'sdk'
               version: '2.x'
+              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
           - task: SonarCloudPrepare@1
             inputs:
               SonarCloud: 'sonarCloudBackend'
@@ -30,6 +31,7 @@ stages:
           - task: UseDotNet@2
             inputs:
               packageType: 'sdk'
+              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
               version: '3.1.x'
           - task: DotNetCoreCLI@2
             inputs:
@@ -48,6 +50,7 @@ stages:
             inputs:
               packageType: 'sdk'
               version: '2.x'
+              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
           - task: SonarCloudAnalyze@1
           - task: SonarCloudPublish@1
             inputs:
