--- a/pipelines/backend-azure-pipelines.yml
+++ b/pipelines/backend-azure-pipelines.yml
@@ -21,7 +21,6 @@ stages:
             inputs:
               packageType: 'sdk'
               version: '2.x'
-              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
           - task: SonarCloudPrepare@1
             inputs:
               SonarCloud: 'sonarCloudBackend'
@@ -31,26 +30,24 @@ stages:
           - task: UseDotNet@2
             inputs:
               packageType: 'sdk'
-              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
               version: '3.1.x'
           - task: DotNetCoreCLI@2
             inputs:
               command: 'restore'
-              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
+              projects: '$(Build.SourcesDirectory)/CaffStore.Backend/**/*.csproj'
               feedsToUse: 'select'
           - task: DotNetCoreCLI@2
             inputs:
               command: 'build'
-              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
+              projects: '$(Build.SourcesDirectory)/CaffStore.Backend/**/*.csproj'
           - task: DotNetCoreCLI@2
             inputs:
               command: 'test'
-              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
+              projects: '$(Build.SourcesDirectory)/CaffStore.Backend/**/*.csproj'
           - task: UseDotNet@2
             inputs:
               packageType: 'sdk'
               version: '2.x'
-              workingDirectory: '$(Build.SourcesDirectory)/CaffStore.Backend'
           - task: SonarCloudAnalyze@1
           - task: SonarCloudPublish@1
             inputs:
