--- a/pipelines/frontend-azure-pipelines.yml
+++ b/pipelines/frontend-azure-pipelines.yml
@@ -13,9 +13,9 @@ pool:
   vmImage: 'ubuntu-latest'
 
 stages:
-  - stage: Build
+  - stage: SonarCloud
     jobs:
-      - job: Build
+      - job: SonarCloud
         steps:
           - task: SonarCloudPrepare@1
             inputs:
