Update valgrind-azure-pipelines.yml for Azure Pipelines

--- a/pipelines/valgrind-azure-pipelines.yml
+++ b/pipelines/valgrind-azure-pipelines.yml
@@ -41,6 +41,8 @@ stages:
               configMode: 'manual'
               cliProjectKey: 'caffly-parser'
               cliSources: '$(Build.SourcesDirectory)/CIFFCAFFParser'
+              extraProperties: |
+                sonar.cfamily.build-wrapper-output=build_wrapper_output_directory
           - task: SonarCloudAnalyze@1
           - task: SonarCloudPublish@1
             inputs:
