--- a/pipelines/valgrind-azure-pipelines.yml
+++ b/pipelines/valgrind-azure-pipelines.yml
@@ -43,6 +43,7 @@ stages:
               curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
               unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
               export PATH=$HOME/.sonar/build-wrapper-linux-x86:$PATH
+            workingDirectory: $(Build.SourcesDirectory)/CIFFCAFFParser
           - task: SonarCloudPrepare@1
             inputs:
               SonarCloud: 'sonarCloudParser'
