--- a/pipelines/valgrind-azure-pipelines.yml
+++ b/pipelines/valgrind-azure-pipelines.yml
@@ -42,13 +42,13 @@ stages:
               cliProjectKey: 'caffly-parser'
               cliSources: '$(Build.SourcesDirectory)/CIFFCAFFParser'
               extraProperties: |
-                sonar.cfamily.build-wrapper-output=bw-output
+                sonar.cfamily.build-wrapper-output=$(Build.SourcesDirectory)/CIFFCAFFParser/bw-output
           - script: |
               curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
               unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
               export PATH=$HOME/.sonar/build-wrapper-linux-x86:$PATH
 
-              build-wrapper-linux-x86-64 --out-dir bw-output make
+              build-wrapper-linux-x86-64 --out-dir $(Build.SourcesDirectory)/CIFFCAFFParser/bw-output make
             workingDirectory: $(Build.SourcesDirectory)/CIFFCAFFParser
           - task: SonarCloudAnalyze@1
           - task: SonarCloudPublish@1
