--- a/pipelines/valgrind-azure-pipelines.yml
+++ b/pipelines/valgrind-azure-pipelines.yml
@@ -43,6 +43,7 @@ stages:
               cliSources: '$(Build.SourcesDirectory)/CIFFCAFFParser'
               extraProperties: |
                 sonar.cfamily.build-wrapper-output=$(Build.SourcesDirectory)/CIFFCAFFParser/bw-output
+                sonar.exclusions=**/lodepng.cpp
           - script: |
               curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
               unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
