Update swagger generation and frontend dockerfile

--- a/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Development.json
+++ b/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Development.json
@@ -8,5 +8,8 @@
 	"JwtBearerTokenOptions": {
 		"Authority": "http://localhost:55499",
 		"RequireHttpsMetadata": "false"
+	},
+	"SwaggerGenOptions": {
+		"ServerUri": "http://localhost:55499"
 	}
 }
