--- a/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
+++ b/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
@@ -16,5 +16,8 @@
 	"BlobStorageOptions": {
 		"ConnectionString": "<Set by KeyVault>",
 		"ContainerName": "files"
+	},
+	"SwaggerGenOptions": {
+		"ServerUri": "https://api-caffly.azurewebsites.net"
 	}
 }
