--- a/CaffStore.Frontend/Dockerfile
+++ b/CaffStore.Frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:alpine AS caff-store-build
 WORKDIR /app
 COPY . .
-RUN npm ci && npm run build
+RUN npm ci && ng build --prod
 
 FROM nginx:alpine
 COPY --from=caff-store-build /app/dist/caff-store /usr/share/nginx/html
