--- a/pipelines/frontend-azure-pipelines.yml
+++ b/pipelines/frontend-azure-pipelines.yml
@@ -7,7 +7,13 @@ trigger:
       - CaffStore.Frontend/*
 
 pr:
-- master
+  branches:
+   include:
+     - master
+  paths:
+    include:
+      - CaffStore.Frontend/*
+    
 
 variables:
   workingDirectory: $(Build.SourcesDirectory)/CaffStore.Frontend
