Update backend-azure-pipelines.yml for Azure Pipelines

--- a/pipelines/backend-azure-pipelines.yml
+++ b/pipelines/backend-azure-pipelines.yml
@@ -7,7 +7,12 @@ trigger:
       - CaffStore.Backend/*
 
 pr:
-- master
+  branches:
+   include:
+     - master
+  paths:
+    include:
+      - CaffStore.Backend/*
 
 variables:
   workingDirectory: $(Build.SourcesDirectory)/CaffStore.Backend
