--- a/pipelines/valgrind-azure-pipelines.yml
+++ b/pipelines/valgrind-azure-pipelines.yml
@@ -7,7 +7,12 @@ trigger:
       - CIFFCAFFParser/*
 
 pr:
-- master
+  branches:
+   include:
+     - master
+  paths:
+    include:
+      - CIFFCAFFParser/*
 
 variables:
   workingDirectory: $(Build.SourcesDirectory)/CIFFCAFFParser
