Update frontend-azure-pipelines.yml for Azure Pipelines

--- a/pipelines/frontend-azure-pipelines.yml
+++ b/pipelines/frontend-azure-pipelines.yml
@@ -22,11 +22,11 @@ stages:
     jobs:
       - job: Build
         steps:
-          - task: CmdLine@2
-            inputs:
-              script: |
-                wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-                sudo apt install ./google-chrome-stable_current_amd64.deb
+          # - task: CmdLine@2
+          #   inputs:
+          #     script: |
+          #       wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          #       sudo apt install ./google-chrome-stable_current_amd64.deb
           - task: Npm@1
             displayName: Npm ci
             inputs:
@@ -36,7 +36,7 @@ stages:
             displayName: Test
             inputs:
               command: 'custom'
-              customCommand: 'run test -- --watch=false'
+              customCommand: 'run test -- --watch=false --browsers ChromeHeadless'
               workingDir: '$(workingDirectory)'
   - stage: SonarCloud
     jobs:
