--- a/pipelines/frontend-azure-pipelines.yml
+++ b/pipelines/frontend-azure-pipelines.yml
@@ -18,15 +18,10 @@ pool:
   vmImage: 'ubuntu-latest'
 
 stages:
-  - stage: Build
+  - stage: Test
     jobs:
-      - job: Build
+      - job: Test
         steps:
-          # - task: CmdLine@2
-          #   inputs:
-          #     script: |
-          #       wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          #       sudo apt install ./google-chrome-stable_current_amd64.deb
           - task: Npm@1
             displayName: Npm ci
             inputs:
