Provide full token url in swagger doc

--- a/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Development.json
+++ b/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Development.json
@@ -10,6 +10,7 @@
 		"RequireHttpsMetadata": "false"
 	},
 	"SwaggerGenOptions": {
-		"ServerUri": "http://localhost:55499"
+		"ServerUri": "http://localhost:55499",
+		"TokenUri": "http://localhost:55499/connect/token"
 	}
 }
