--- a/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
+++ b/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
@@ -18,6 +18,7 @@
 		"ContainerName": "files"
 	},
 	"SwaggerGenOptions": {
-		"ServerUri": "https://api-caffly.azurewebsites.net"
+		"ServerUri": "https://api-caffly.azurewebsites.net",
+		"TokenUri": "https://api-caffly.azurewebsites.net/connect/token"
 	}
 }
