Fix frontend Dockerfile

--- a/CaffStore.Frontend/Dockerfile
+++ b/CaffStore.Frontend/Dockerfile
@@ -6,5 +6,5 @@ RUN npm run build -- --prod
 
 FROM nginx:alpine
 COPY --from=caff-store-build /app/dist/caff-store /usr/share/nginx/html
-COPY --from=caff-store-build nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=caff-store-build /app/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
