Update frontend-azure-pipelines.yml for Azure Pipelines

--- a/pipelines/frontend-azure-pipelines.yml
+++ b/pipelines/frontend-azure-pipelines.yml
@@ -29,7 +29,11 @@ stages:
               scannerMode: 'CLI'
               configMode: 'manual'
               cliProjectKey: 'caffly-frontend'
-              cliSources: $(workingDirectory)
+              cliSources: '$(workingDirectory)'
+              extraProperties: |
+                sonar.tests=src
+                sonar.test.inclusions=**/*.spec.ts
+                sonar.typescript.lcov.reportPaths=coverage/lcov.info
           - task: Npm@1
             displayName: Npm ci
             inputs:
