--- a/pipelines/frontend-azure-pipelines.yml
+++ b/pipelines/frontend-azure-pipelines.yml
@@ -29,12 +29,13 @@ stages:
               scannerMode: 'CLI'
               configMode: 'manual'
               cliProjectKey: 'caffly-frontend'
-              cliSources: '$(workingDirectory)/src'
               extraProperties: |
                 sonar.projectBaseDir=$(workingDirectory)
-                sonar.sources=$(workingDirectory)/src
-                sonar.tests=$(workingDirectory)/src
-                sonar.test.inclusions=**/*.spec.ts
+                sonar.sources=src
+                sonar.tests=src
+                sonar.exclusions=**/*.spec.ts,**/*test.ts,**/*.js
+                sonar.test.inclusions=**/*.spec.ts,**/*test.ts
+                sonar.coverage.exclusions=**/*.js,src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.ts
                 sonar.javascript.lcov.reportPaths=coverage/caff-store/lcov.info
           - task: Npm@1
             displayName: Npm ci
