--- a/pipelines/frontend-azure-pipelines.yml
+++ b/pipelines/frontend-azure-pipelines.yml
@@ -33,7 +33,7 @@ stages:
                 sonar.projectBaseDir=$(workingDirectory)
                 sonar.sources=src
                 sonar.tests=src
-                sonar.exclusions=**/*.spec.ts,**/*.js
+                sonar.exclusions=**/*.spec.ts,**/*.js,src/app/api-generated/**/*
                 sonar.test.inclusions=**/*.spec.ts
                 sonar.coverage.exclusions=**/*.js,src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.ts
                 sonar.javascript.lcov.reportPaths=coverage/caff-store/lcov.info
