--- a/pipelines/backend-azure-pipelines.yml
+++ b/pipelines/backend-azure-pipelines.yml
@@ -1,15 +1,18 @@
 trigger:
   branches:
-   include:
-     - master
+    include:
+      - master
   paths:
     include:
       - CaffStore.Backend/*
 
 pr:
   branches:
-   include:
-     - master
+    include:
+      - master
+  paths:
+    include:
+      - CaffStore.Backend/*
 
 variables:
   workingDirectory: $(Build.SourcesDirectory)/CaffStore.Backend
