--- a/CaffStore.Backend/CaffStore.Backend.Api/CaffStore.Backend.Api.csproj
+++ b/CaffStore.Backend/CaffStore.Backend.Api/CaffStore.Backend.Api.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>0156c8a8-ea49-42c8-8e1d-d2ce6667ef12</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\20201117221706_Initial.cs" />
+    <Compile Remove="Migrations\20201117221706_Initial.Designer.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.1" />
@@ -23,6 +28,10 @@
     <ProjectReference Include="..\CaffStore.Backend.Bll\CaffStore.Backend.Bll.csproj" />
     <ProjectReference Include="..\CaffStore.Backend.Common\CaffStore.Backend.Common.csproj" />
     <ProjectReference Include="..\CaffStore.Backend.Data\CaffStore.Backend.Dal.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 
