--- a/CaffStore.Backend/CaffStore.Backend.Parser/CaffStore.Backend.Parser.csproj
+++ b/CaffStore.Backend/CaffStore.Backend.Parser/CaffStore.Backend.Parser.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CaffStore.Backend.Interface.Bll\CaffStore.Backend.Interface.Bll.csproj" />
+  </ItemGroup>
+
 </Project>
