WIP endpoints for caffItems

--- a/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
+++ b/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
@@ -15,7 +15,8 @@
 	},
 	"BlobStorageOptions": {
 		"ConnectionString": "<Set by KeyVault>",
-		"ContainerName": "files"
+		"CaffContainerName": "caffs",
+		"PreviewContainerName": "previews" 
 	},
 	"SwaggerGenOptions": {
 		"ServerUri": "https://api-caffly.azurewebsites.net",
