Update backend-azure-pipelines.yml for Azure Pipelines

--- a/pipelines/backend-azure-pipelines.yml
+++ b/pipelines/backend-azure-pipelines.yml
@@ -32,6 +32,9 @@ stages:
               organization: 'bodnarkevin'
               scannerMode: 'MSBuild'
               projectKey: 'caffly-backend'
+              extraProperties: |
+                sonar.projectBaseDir=$(workingDirectory)
+                sonar.exclusions=CaffStore.Backend.Api/Migrations/**/*
           - task: UseDotNet@2
             inputs:
               packageType: 'sdk'
