Provide access to generate sas tokens for blobs

--- a/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
+++ b/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
@@ -14,9 +14,11 @@
 		"Authority": "https://api-caffly.azurewebsites.net"
 	},
 	"BlobStorageOptions": {
-		"ConnectionString": "<Set by KeyVault>",
+		"StorageAccountUri": "https://caffly.blob.core.windows.net",
+		"StorageAccountName": "caffly",
+		"StorageAccountKey": "<Set by KeyVault>",
 		"CaffContainerName": "caffs",
-		"PreviewContainerName": "previews" 
+		"PreviewContainerName": "previews"
 	},
 	"SwaggerGenOptions": {
 		"ServerUri": "https://api-caffly.azurewebsites.net",
