Fix sas token generation

--- a/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
+++ b/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
@@ -17,8 +17,9 @@
 		"StorageAccountUri": "https://caffly.blob.core.windows.net",
 		"StorageAccountName": "caffly",
 		"StorageAccountKey": "<Set by KeyVault>",
+		"PreviewContainerName": "previews",
 		"CaffContainerName": "caffs",
-		"PreviewContainerName": "previews"
+		"SasTokenLifetimeSeconds": 180 
 	},
 	"SwaggerGenOptions": {
 		"ServerUri": "https://api-caffly.azurewebsites.net",
