--- a/CaffStore.Backend/CaffStore.Backend.Parser.Native/CaffStore.Backend.Parser.Native.vcxproj.filters
+++ b/CaffStore.Backend/CaffStore.Backend.Parser.Native/CaffStore.Backend.Parser.Native.vcxproj.filters
@@ -21,22 +21,22 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\CAFFParserDll\BytesToIntConverter.h">
+    <ClInclude Include="BytesToIntConverter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\CAFFParserDll\CAFFApi.h">
+    <ClInclude Include="CAFFApi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\CAFFParserDll\CAFFHandler.h">
+    <ClInclude Include="CAFFHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\CAFFParserDll\CIFFHandler.h">
+    <ClInclude Include="CIFFHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\CAFFParserDll\Logger.h">
+    <ClInclude Include="Logger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\CAFFParserDll\ParserExceptions.h">
+    <ClInclude Include="ParserExceptions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -47,25 +47,19 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\CAFFParserDll\BytesToIntConverter.cpp">
+    <ClCompile Include="BytesToIntConverter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\CAFFParserDll\pch.cpp">
+    <ClCompile Include="CAFFHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\CAFFParserDll\CAFFHandler.cpp">
+    <ClCompile Include="CIFFHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\CAFFParserDll\CIFFHandler.cpp">
+    <ClCompile Include="ParserExceptions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\CAFFParserDll\dllmain.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\CAFFParserDll\Logger.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\CAFFParserDll\ParserExceptions.cpp">
+    <ClCompile Include="Logger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
