--- a/CaffStore.Frontend/angular.json
+++ b/CaffStore.Frontend/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css",
               "src/app/shared/fonts.css"
             ],
@@ -121,6 +122,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "caff-store"
 }
